<resources>
    <string name="app_name">TrackMe</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="last_record">Last record:</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="codice_fiscale">Codice fiscale</string>
    <string name="save">Save</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="weight">Weight</string>
    <string name="select_a_number">Mark your weight...</string>
    <string name="user">Usuario</string>
    <string name="julian_cuellar">Julian Cuellar</string>
    <string name="emailShow">julian.cuellar@mail.polimi.com</string>
    <string name="space"> </string>
    <string name="residence">Residence</string>
    <string name="birthdate">Birthdate</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="information">is asking for permission to access your stored data, do you accept?</string>
</resources>
